# dls-pmac-control

./: .copier-answers.yml  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitremotes  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  RELEASE.txt  TODO.txt  catalog-info.yaml  gather.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  switcher.json  testgather.txt  versions.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: _test.yml  ci.yml  code.yml  codeql-analysis.yml  docs.yml  linkcheck.yml
3.0.1b1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.0.1b1/.doctrees/: index.doctree  reference.doctree
3.0.1b1/_static/: documentation_options.js
3.0.1b1/explanations/: decisions.html
3.0.1b1/how-to/: contribute.html  contributing.html  gather.html  gui.html  run-container.html  watches.html
3.0.1b1/reference/: api.html
3.0.1b1/tutorials/: installation.html
3.2.0/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
3.2.0/.doctrees/: explanations.doctree  genindex.doctree  how-to.doctree  index.doctree  reference.doctree
3.2.0/_sources/: reference.md.txt
3.2.0/explanations/: decisions.html
3.2.0/how-to/: contribute.html  contributing.html  gather.html  gui.html  run-container.html  watches.html
3.2.0/reference/: api.html
3.2.0/tutorials/: installation.html
3.2.0b1/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
3.2.0b1/.doctrees/: tutorials.doctree
3.2.0b1/_static/: documentation_options.js
3.2.0b1/explanations/: decisions.html
3.2.0b1/how-to/: contribute.html  contributing.html  gather.html  gui.html  run-container.html  watches.html
3.2.0b1/reference/: api.html
3.2.0b1/tutorials/: installation.html
3.2.1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.1/.doctrees/: index.doctree
3.2.1/_api/: dls_pmac_control.html
3.2.1/explanations/: decisions.html
3.2.1/how-to/: contribute.html  contributing.html  gather.html  gui.html  run-container.html  watches.html
3.2.1/tutorials/: installation.html
3.2.2/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.3/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.3b1/: .buildinfo  _api.html  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  tutorials.html
3.2.3b2/: index.html  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
dls_pmaccontrol/: CSstatus.py  GlobalStatus.py  __init__.py  __main__.py  axissettings.py  cli.py  commentstosort  commsThread.py  dls_pmaccontrol.py  energise.py  formAxisSettings.ui  formCSStatus.ui  formControl.ui  formEnergise.ui  formGather.ui  formGlobalStatus.ui  formLogin.ui  formPpmacAxisSettings.ui  formPpmacCSStatus.ui  formStatus.ui  formWatches.ui  gather.py  gatherchannel.py  login.py  motor.py  original-pmac-gather.py  pmac-watches.py  ppmacgather.py  ppmacstatus.py  status.py  ui_formAxisSettings.py  ui_formCSStatus.py  ui_formControl.py  ui_formEnergise.py  ui_formGather.py  ui_formGlobalStatus.py  ui_formLogin.py  ui_formPpmacAxisSettings.py  ui_formPpmacCSStatus.py  ui_formStatus.py  (+2 more)
docs/: conf.py  gather.rst  gui.rst  index.rst  installation.rst  reference.md  reference.rst  watches.rst
documentation/: Makefile  config.cfg  manual.src
master/: .buildinfo  explanations.html  gather.html  genindex.html  gui.html  how-to.html  index.html  installation.html  introduction.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html  watches.html
migrate-dls-controls-diamondlightsource/: .buildinfo  explanations.html  gather.html  genindex.html  gui.html  how-to.html  index.html  installation.html  introduction.html  reference.html  search.html  tutorials.html  watches.html
original-docs/: conf.py
tests/: ignore_test_dls_pmaccontrol.py  ignore_test_gui.py  ignore_test_motor.py  test_axissettings.py  test_cli.py  test_commsthread.py  test_csstatus.py  test_dls_pmaccontrol.py  test_energise.py  test_gather.py  test_gatherchannel.py  test_globalstatus.py  test_login.py  test_motor.py  test_status.py  test_watches.py
v3.0.1/: .buildinfo  explanations.html  gather.html  genindex.html  gui.html  how-to.html  index.html  installation.html  introduction.html  objects.inv  reference.html  search.html  tutorials.html  watches.html
v3.0.1-beta/: .buildinfo  explanations.html  gather.html  genindex.html  gui.html  how-to.html  index.html  installation.html  introduction.html  reference.html  search.html  tutorials.html  watches.html
v3.0.1-beta2/: .buildinfo  explanations.html  gather.html  genindex.html  gui.html  how-to.html  index.html  installation.html  introduction.html  objects.inv  reference.html  search.html  searchindex.js  tutorials.html  watches.html
v3.0.1-beta3/: .buildinfo  explanations.html  gather.html  genindex.html  gui.html  how-to.html  index.html  installation.html  introduction.html  objects.inv  reference.html  search.html  tutorials.html  watches.html
v3.0.1-beta4/: .buildinfo  explanations.html  gather.html  genindex.html  gui.html  how-to.html  index.html  installation.html  introduction.html  objects.inv  reference.html  search.html  tutorials.html  watches.html
v3.1.0/: .buildinfo  explanations.html  genindex.html  how-to.html  search.html  tutorials.html  watches.html
(+252 files in other folders)
