[metadata]
name = dls_pmaccontrol
version = file: dls_pmaccontrol/VERSION
description = Delta Tau pmac control utility
author = Ulrik Kofoed Pederson
maintainer = Giles Knap
author_email = giles.knap@diamond.ac.uk

[options]
packages =
    dls_pmaccontrol
include_package_data = True
install_requires =
    dls_pmaclib
    numpy
    PyQt5

[options.package_data]
dls_pmaccontrol = VERSION

[options.entry_points]
console_scripts =
    dls-pmac-control.py = dls_pmaccontrol.motor:main