[metadata]
name = dls_pmaccontrol
version = file: dls_pmaccontrol/VERSION
description = Delta Tau pmac control utility
author = Ulrik Kofoed Pederson
maintainer = Giles Knap
author_email = giles.knap@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages =
    dls_pmaccontrol
include_package_data = True
install_requires =
    dls_pmaclib
    numpy
    pyqt5
    pythonqwt

[options.package_data]
dls_pmaccontrol = VERSION

[options.entry_points]
console_scripts =
    dls-pmac-control.py = dls_pmaccontrol.motor:main

[options.packages.find]
# Don't include our tests directory in the distribution
exclude = tests

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
# https://black.readthedocs.io/en/stable/the_black_code_style.html?highlight=isort#how-black-wraps-lines
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
skip=setup.py,conf.py
known_third_party=dls_pmaclib

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
per-file-ignores = dls_pmaccontrol/ui_*: F401, E501
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --tb=native -vv --flake8 --black --mypy
