[metadata]

name = dls_pmaccontrol
description = Delta Tau pmac control utility
url = https://github.com/DiamondLightSource/dls-pmac-control
author = Ulrik Kofoed Pederson
maintainer = Giles Knap
author_email = giles.knap@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src

setup_requires =
    setuptools_scm[toml]>=6.2

# Specify any package dependencies below.
include_package_data = True
install_requires =
    # dls-pmaclib @ git+https://github.com/DiamondLightSource/dls-pmac-lib.git@5b6acbfb1ec71ac50957c37e761d76529b16380f
    # dls-pmaclib @ https://github.com/DiamondLightSource/dls-pmac-lib/archive/refs/tags/3.0.0.zip
    dls-pmaclib >= 3.0.1-beta1
    numpy
    pyqt5 == 5.15.7
    pythonqwt
    mock

[options.extras_require]
# For development tests/docs
dev =
    black==22.8.0
    flake8-isort
    isort>5.0
    mypy
    pipdeptree
    pre-commit
    pytest-cov
    setuptools_scm[toml]>=6.2
    sphinx-rtd-theme-github-versions
    tox
    types-mock

[options.packages.find]
where = src
# Don't include our tests directory in the distribution
exclude = tests

# Specify any package data to be included in the wheel below.
# [options.package_data]
# dls_pmaccontrol =
#     subpackage/*.yaml

[options.entry_points]
# Include a command line script
console_scripts =
    dls-pmac-control = dls_pmaccontrol.motor:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True

[isort]
known_third_party=dls_pmaclib
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,
    # See https://github.com/PyCQA/pycodestyle/issues/373
    F811,
    # support typing.overload decorator
    F722,
    # allow Annotated[typ, some_func("some string")]
exclude =
    ui_*
    .tox
    .venv

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=dls_pmaccontrol --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
# removed warnings as error since qt5 gets 'DeprecationWarning: Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated, and in 3.8 it will stop working'
# restore when we move to qt6?
# filterwarnings = error
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths =
    docs src tests

[coverage:run]
data_file = /tmp/dls_pmaccontrol.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/

# Use tox to provide parallel linting and testing
# NOTE that we pre-install all tools in the dev dependencies (including tox).
# Hence the use of allowlist_externals instead of using the tox virtualenvs.
# This ensures a match between developer time tools in the IDE and tox tools.
[tox:tox]
minversion = 3.7
skipsdist=true
skipinstall=true

[testenv:{pre-commit,mypy,pytest,docs}]
passenv =
    PYTHONPATH
    HOME
setenv =
    QT_QPA_PLATFORM = offscreen
allowlist_externals =
    pytest
    pre-commit
    mypy
    sphinx-build
commands =
    pytest: pytest tests {posargs}
    mypy: mypy src tests {posargs}
    pre-commit: pre-commit run --all-files {posargs}
    docs: sphinx-build -EWT --keep-going docs build/html {posargs}
